--- a/index.html
+++ b/index.html
@@ -2,40 +2,259 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NovaPatch</title>
-    <style>
-        body {
-            background-color: #0e0e0e;
-            color: #ffffff;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-            padding: 50px;
-        }
-        h1 {
-            color: #00d8ff;
-            font-size: 3em;
-        }
-        a.button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 15px 30px;
-            background-color: #00d8ff;
-            color: #0e0e0e;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 8px;
-        }
-        a.button:hover {
-            background-color: #009fbb;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>NovaPatch – Hunt Royale Mods</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+    :root {
+      --primary: #00e1ff;
+      --bg: #000014;
+      --bg-alt: #050022;
+      --text: #e0e0f0;
+      --heading: #ffffff;
+    }
+    * { box-sizing: border-box; margin:0; padding:0; }
+    body {
+      font-family: 'Orbitron', sans-serif;
+      background: linear-gradient(to bottom, #000014, #050022);
+      color: var(--text);
+    }
+    a { color: var(--primary); text-decoration: none; }
+    header {
+      padding: 60px 20px;
+      text-align: center;
+      background: url('https://cdn.pixabay.com/photo/2013/07/18/20/26/space-165560_960_720.jpg') no-repeat center center;
+      background-size: cover;
+      color: white;
+    }
+    header h1 {
+      font-size: 3rem;
+      color: var(--primary);
+      text-shadow: 0 0 10px #00e1ff;
+      margin-bottom: 8px;
+    }
+    header p {
+      font-size: 1.2rem;
+      margin-bottom: 20px;
+      text-shadow: 0 0 6px #00e1ff;
+    }
+    .btn {
+      background: var(--primary);
+      color: var(--bg);
+      font-weight: bold;
+      padding: 12px 24px;
+      border-radius: 4px;
+      transition: background .3s ease;
+    }
+    .btn:hover { background: #00b8cc; }
+
+    nav {
+      background: var(--bg-alt);
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      padding: 12px 0;
+      border-bottom: 2px solid #222;
+    }
+
+    nav button {
+      background: transparent;
+      color: var(--primary);
+      border: none;
+      padding: 10px 24px;
+      font-size: 1rem;
+      cursor: pointer;
+      border-bottom: 2px solid transparent;
+    }
+
+    nav button.active {
+      border-color: var(--primary);
+      font-weight: bold;
+    }
+
+    section {
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
+      display: none;
+    }
+    section.active { display: block; }
+    h2 {
+      color: var(--primary);
+      margin-bottom: 16px;
+      font-size: 2rem;
+      text-align: center;
+      text-shadow: 0 0 6px #00e1ff;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
+      gap: 20px;
+    }
+    .card {
+      background: rgba(20, 20, 40, 0.9);
+      border: 1px solid #333;
+      border-radius: 6px;
+      padding: 16px;
+      box-shadow: 0 0 15px rgba(0, 225, 255, 0.2);
+      transition: transform .2s ease;
+    }
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 0 25px rgba(0, 225, 255, 0.4);
+    }
+    .card h3 {
+      color: var(--heading);
+      margin-bottom: 6px;
+    }
+    .card p {
+      margin-bottom: 8px;
+    }
+    .price {
+      font-weight: bold;
+      color: var(--primary);
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: .9rem;
+      color: #888;
+      background: var(--bg-alt);
+    }
+  </style>
+
+<style>
+/* Fade-in animation for content */
+.fade-in {
+  animation: fadeIn ease 2s;
+  -webkit-animation: fadeIn ease 2s;
+  -moz-animation: fadeIn ease 2s;
+  -o-animation: fadeIn ease 2s;
+  -ms-animation: fadeIn ease 2s;
+}
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+/* Glowing stars background */
+body::before {
+  content: '';
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: url('https://cdn.pixabay.com/animation/2023/05/26/09/57/09-57-11-905_512.gif') repeat;
+  z-index: -1;
+  opacity: 0.1;
+}
+</style>
+
+<style>
+  body {
+    font-family: 'Orbitron', sans-serif;
+  }
+
+  .price-item:hover {
+    background-color: rgba(255, 255, 255, 0.05);
+    padding-left: 10px;
+    border-left: 3px solid #00fff2;
+    transition: all 0.3s ease-in-out;
+  }
+
+  @media (max-width: 768px) {
+    h2 {
+      font-size: 20px;
+    }
+    .price-item {
+      font-size: 14px;
+    }
+  }
+
+  @media (min-width: 769px) {
+    h2 {
+      font-size: 26px;
+    }
+    .price-item {
+      font-size: 18px;
+    }
+  }
+</style>
+
 </head>
+
 <body>
-    <h1>Welcome to NovaPatch</h1>
-    <p>Your trusted service for Hunt Royale savefile modifications.</p>
-    <a class="button" href="https://discord.gg/2bF6Yue9" target="_blank">Join our Discord</a>
-    <p style="margin-top: 40px; font-size: 0.9em; color: #aaaaaa;">© 2025 NovaPatch. All rights reserved.</p>
+
+<header>
+  <h1>NovaPatch</h1>
+  <p>Your trusted Hunt Royale savefile modding service</p>
+  <a href="https://discord.gg/2bF6Yue9" class="btn" target="_blank">Join our Discord</a>
+</header>
+
+<nav>
+  <button class="tab-btn active" data-tab="solo">Solo Prices</button>
+  <button class="tab-btn" data-tab="bundles">Bundles</button>
+</nav>
+
+<section id="solo" class="active">
+  <h2>Solo Prices</h2>
+  <div class="grid">
+    <div class="card"><h3>Unlock All Heroes</h3><p class="price">10 €</p></div>
+    <div class="card"><h3>Unlock All Skins</h3><p class="price">8 €</p></div>
+    <div class="card"><h3>Unlock All Skills</h3><p class="price">6 €</p></div>
+    <div class="card"><h3>Unlock All Pets</h3><p class="price">6 €</p></div>
+    <div class="card"><h3>Max Level All Heroes</h3><p class="price">10 €</p></div>
+    <div class="card"><h3>Awakening 1</h3><p class="price">8 €</p></div>
+    <div class="card"><h3>Awakening 2</h3><p class="price">10 €</p></div>
+    <div class="card"><h3>50 000 Gold</h3><p class="price">3 €</p></div>
+    <div class="card"><h3>10 000 Gems</h3><p class="price">4 €</p></div>
+    <div class="card"><h3>500 000 Dungeon Currency</h3><p class="price">6 €</p></div>
+    <div class="card"><h3>Level 7 Stones (50×)</h3><p class="price">5 €</p></div>
+    <div class="card"><h3>Level 8 Stones (50×)</h3><p class="price">20 €</p></div>
+    <div class="card"><h3>Level 9 Stones (50×)</h3><p class="price">30 €</p></div>
+    <div class="card"><h3>Perfect Mythic Gear</h3><p class="price">20 €</p></div>
+    <div class="card"><h3>Custom Titan Gear</h3><p class="price">30 €</p></div>
+    <div class="card"><h3>VIP Pass</h3><p class="price">4 €</p></div>
+    <div class="card"><h3>Season Pass</h3><p class="price">4 €</p></div>
+    <div class="card"><h3>Dungeon Pass</h3><p class="price">4 €</p></div>
+  </div>
+</section>
+
+<section id="bundles">
+  <h2>Bundles</h2>
+  <div class="grid">
+    <div class="card"><h3>Hero Unlock Pack</h3><p>Heroes, Skins, Skills</p><p class="price">10 €</p></div>
+    <div class="card"><h3>Hero Upgrade Pack</h3><p>Max Level + Awakening 1 & 2</p><p class="price">20 €</p></div>
+    <div class="card"><h3>Stone Mastery Pack</h3><p>Level 7+8 Stones (50×)</p><p class="price">18 €</p></div>
+    <div class="card"><h3>Midgame Boost Pack</h3><p>Mythic Gear + Level 8 Stones</p><p class="price">30 €</p></div>
+    <div class="card"><h3>Endgame God Pack</h3><p>Titan Gear + Level 9 Stones</p><p class="price">50 €</p></div>
+    <div class="card"><h3>Gold Rush Pack</h3><p>50 K Gold + 10 K Gems + 500 K Dungeon</p><p class="price">12 €</p></div>
+    <div class="card"><h3>VIP Bundle</h3><p>VIP + Season + Dungeon Pass</p><p class="price">10 €</p></div>
+  </div>
+</section>
+
+<footer>
+  © 2025 NovaPatch – All rights reserved.
+</footer>
+
+<script>
+  const buttons = document.querySelectorAll('.tab-btn');
+  const sections = document.querySelectorAll('section');
+
+  buttons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      buttons.forEach(b => b.classList.remove('active'));
+      sections.forEach(s => s.classList.remove('active'));
+
+      btn.classList.add('active');
+      document.getElementById(btn.dataset.tab).classList.add('active');
+    });
+  });
+</script>
+
 </body>
 </html>
