--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NovaPatch – Hunt Royale Mods</title>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>NovaPatch – Hunt Royale Mods</title>
+<style>
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
     :root {
       --primary: #00e1ff;
@@ -124,7 +125,6 @@
       background: var(--bg-alt);
     }
   </style>
-
 <style>
 /* Fade-in animation for content */
 .fade-in {
@@ -153,7 +153,6 @@ body::before {
   opacity: 0.1;
 }
 </style>
-
 <style>
   body {
     font-family: 'Orbitron', sans-serif;
@@ -184,63 +183,55 @@ body::before {
     }
   }
 </style>
-
 </head>
-
 <body>
-
 <header>
-  <h1>NovaPatch</h1>
-  <p>Your trusted Hunt Royale savefile modding service</p>
-  <a href="https://discord.gg/2bF6Yue9" class="btn" target="_blank">Join our Discord</a>
+<h1>NovaPatch</h1>
+<p>Your trusted Hunt Royale savefile modding service</p>
+<a class="btn" href="https://discord.gg/2bF6Yue9" target="_blank">Join our Discord</a>
 </header>
-
 <nav>
-  <button class="tab-btn active" data-tab="solo">Solo Prices</button>
-  <button class="tab-btn" data-tab="bundles">Bundles</button>
+<button class="tab-btn active" data-tab="solo">Solo Prices</button>
+<button class="tab-btn" data-tab="bundles">Bundles</button>
 </nav>
-
-<section id="solo" class="active">
-  <h2>Solo Prices</h2>
-  <div class="grid">
-    <div class="card"><h3>Unlock All Heroes</h3><p class="price">10 €</p></div>
-    <div class="card"><h3>Unlock All Skins</h3><p class="price">8 €</p></div>
-    <div class="card"><h3>Unlock All Skills</h3><p class="price">6 €</p></div>
-    <div class="card"><h3>Unlock All Pets</h3><p class="price">6 €</p></div>
-    <div class="card"><h3>Max Level All Heroes</h3><p class="price">10 €</p></div>
-    <div class="card"><h3>Awakening 1</h3><p class="price">8 €</p></div>
-    <div class="card"><h3>Awakening 2</h3><p class="price">10 €</p></div>
-    <div class="card"><h3>50 000 Gold</h3><p class="price">3 €</p></div>
-    <div class="card"><h3>10 000 Gems</h3><p class="price">4 €</p></div>
-    <div class="card"><h3>500 000 Dungeon Currency</h3><p class="price">6 €</p></div>
-    <div class="card"><h3>Level 7 Stones (50×)</h3><p class="price">5 €</p></div>
-    <div class="card"><h3>Level 8 Stones (50×)</h3><p class="price">20 €</p></div>
-    <div class="card"><h3>Level 9 Stones (50×)</h3><p class="price">30 €</p></div>
-    <div class="card"><h3>Perfect Mythic Gear</h3><p class="price">20 €</p></div>
-    <div class="card"><h3>Custom Titan Gear</h3><p class="price">30 €</p></div>
-    <div class="card"><h3>VIP Pass</h3><p class="price">4 €</p></div>
-    <div class="card"><h3>Season Pass</h3><p class="price">4 €</p></div>
-    <div class="card"><h3>Dungeon Pass</h3><p class="price">4 €</p></div>
-  </div>
+<section class="active" id="solo">
+<h2>Solo Prices</h2>
+<div class="grid">
+<div class="card"><h3>Unlock All Heroes</h3><p class="price">10 €</p></div>
+<div class="card"><h3>Unlock All Skins</h3><p class="price">8 €</p></div>
+<div class="card"><h3>Unlock All Skills</h3><p class="price">6 €</p></div>
+<div class="card"><h3>Unlock All Pets</h3><p class="price">6 €</p></div>
+<div class="card"><h3>Max Level All Heroes</h3><p class="price">10 €</p></div>
+<div class="card"><h3>Awakening 1</h3><p class="price">8 €</p></div>
+<div class="card"><h3>Awakening 2</h3><p class="price">10 €</p></div>
+<div class="card"><h3>50 000 Gold</h3><p class="price">3 €</p></div>
+<div class="card"><h3>10 000 Gems</h3><p class="price">4 €</p></div>
+<div class="card"><h3>500 000 Dungeon Currency</h3><p class="price">6 €</p></div>
+<div class="card"><h3>Level 7 Stones (50×)</h3><p class="price">5 €</p></div>
+<div class="card"><h3>Level 8 Stones (50×)</h3><p class="price">20 €</p></div>
+<div class="card"><h3>Level 9 Stones (50×)</h3><p class="price">30 €</p></div>
+<div class="card"><h3>Perfect Mythic Gear</h3><p class="price">20 €</p></div>
+<div class="card"><h3>Custom Titan Gear</h3><p class="price">30 €</p></div>
+<div class="card"><h3>VIP Pass</h3><p class="price">4 €</p></div>
+<div class="card"><h3>Season Pass</h3><p class="price">4 €</p></div>
+<div class="card"><h3>Dungeon Pass</h3><p class="price">4 €</p></div>
+</div>
 </section>
-
 <section id="bundles">
-  <h2>Bundles</h2>
-  <div class="grid">
-    <div class="card"><h3>Hero Unlock Pack</h3><p>Heroes, Skins, Skills</p><p class="price">10 €</p></div>
-    <div class="card"><h3>Hero Upgrade Pack</h3><p>Max Level + Awakening 1 & 2</p><p class="price">20 €</p></div>
-    <div class="card"><h3>Stone Mastery Pack</h3><p>Level 7+8 Stones (50×)</p><p class="price">18 €</p></div>
-    <div class="card"><h3>Midgame Boost Pack</h3><p>Mythic Gear + Level 8 Stones</p><p class="price">30 €</p></div>
-    <div class="card"><h3>Endgame God Pack</h3><p>Titan Gear + Level 9 Stones</p><p class="price">50 €</p></div>
-    <div class="card"><h3>Gold Rush Pack</h3><p>50 K Gold + 10 K Gems + 500 K Dungeon</p><p class="price">12 €</p></div>
-    <div class="card"><h3>VIP Bundle</h3><p>VIP + Season + Dungeon Pass</p><p class="price">10 €</p></div>
-  </div>
+<h2>Bundles</h2>
+<div class="grid">
+<div class="card"><h3>Hero Unlock Pack</h3><p>Heroes, Skins, Skills</p><p class="price">10 €</p></div>
+<div class="card"><h3>Hero Upgrade Pack</h3><p>Max Level + Awakening 1 &amp; 2</p><p class="price">20 €</p></div>
+<div class="card"><h3>Stone Mastery Pack</h3><p>Level 7+8 Stones (50×)</p><p class="price">18 €</p></div>
+<div class="card"><h3>Midgame Boost Pack</h3><p>Mythic Gear + Level 8 Stones</p><p class="price">30 €</p></div>
+<div class="card"><h3>Endgame God Pack</h3><p>Titan Gear + Level 9 Stones</p><p class="price">50 €</p></div>
+<div class="card"><h3>Gold Rush Pack</h3><p>50 K Gold + 10 K Gems + 500 K Dungeon</p><p class="price">12 €</p></div>
+<div class="card"><h3>VIP Bundle</h3><p>VIP + Season + Dungeon Pass</p><p class="price">10 €</p></div>
+</div>
 </section>
-
 <footer>
   © 2025 NovaPatch – All rights reserved.
 </footer>
-
 <script>
   const buttons = document.querySelectorAll('.tab-btn');
   const sections = document.querySelectorAll('section');
@@ -255,6 +246,5 @@ body::before {
     });
   });
 </script>
-
 </body>
 </html>
