--- a/unlock_all_heroes.html
+++ b/unlock_all_heroes.html
@@ -14,23 +14,42 @@
       text-align: center;
     }
     .box {
-      background: rgba(0,0,0,0.7);
+      background: rgba(0, 0, 0, 0.75);
       padding: 2rem;
       border-radius: 15px;
-      max-width: 600px;
+      max-width: 800px;
       margin: 2rem auto;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.8);
     }
-    a {
-      color: #4db8ff;
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+      margin-bottom: 1.5rem;
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.8rem 1.5rem;
+      background-color: #00aaff;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
       text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+    .btn:hover {
+      background-color: #008ecc;
     }
   </style>
 </head>
 <body>
   <div class="box">
+    <img src="e1eacdba-7da5-4c53-b763-d583d8f6c533.png" alt="Unlock All Heroes">
     <h1>Unlock All Heroes</h1>
     <p><strong>Price:</strong> 10 €</p>
-    <p>This product is part of NovaPatch's digital upgrade service. For more information or to purchase, please return to the <a href="index.html">main page</a> and open a ticket after payment.</p>
+    <p>Instantly unlock all playable heroes in Hunt Royale. Whether you’re new or experienced, this upgrade gives you access to every hero available – no grinding, just greatness!</p>
+    <a href="https://discord.gg/2bF6Yue9" class="btn" target="_blank">Buy via Discord</a>
   </div>
 </body>
 </html>
