--- a/awakening_2.html
+++ b/awakening_2.html
@@ -44,11 +44,12 @@
 </head>
 <body>
   <div class="box">
-    <h1>Awakening 1</h1>
-    <img src="aw1.png" alt="Awakening 1 Upgrade" />
-    <p><strong>Price:</strong> 8 €</p>
-    <p>Take your unlocked heroes to the next level! With Awakening 1, each hero gains special powers, increased stats, and an edge in battle. Time to awaken their true strength.</p>
-    <a href="https://discord.gg/2bF6Yue9" class="discord-button">Click below to join our Discord and order now</a>
+    <h1>Awakening 2</h1>
+    <img src="aw2.png" alt="Awakening 2" />
+    <p><strong>Price:</strong> 10 €</p>
+    <p>All unlocked heroes who already received Awakening 1 will now be upgraded to <strong>Awakening 2</strong>. This boosts their power and unlocks exclusive abilities.</p>
+    <p><strong>Click below to join our Discord and order now:</strong></p>
+    <a class="button" href="https://discord.gg/2bF6Yue9" target="_blank">Join Discord</a>
   </div>
 </body>
 </html>
