--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@ body::before {
     <a href="max_level_all_heroes.html"><div class="card"><h3>Max Level All Heroes</h3><p class="price">10 €</p></div></a>
     <a href="awakening_1.html"><div class="card"><h3>Awakening 1</h3><p class="price">8 €</p></div></a>
     <a href="awakening_2.html"><div class="card"><h3>Awakening 2</h3><p class="price">10 €</p></div></a>
-    <a href="50 000_gold.html"><div class="card"><h3>50 000 Gold</h3><p class="price">3 €</p></div></a>
-    <a href="10 000_gems.html"><div class="card"><h3>10 000 Gems</h3><p class="price">4 €</p></div></a>
-    <a href="500 000_dungeon_currency.html"><div class="card"><h3>500 000 Dungeon Currency</h3><p class="price">6 €</p></div></a>
+    <a href="50_000_gold.html"><div class="card"><h3>50 000 Gold</h3><p class="price">3 €</p></div></a>
+    <a href="10_000_gems.html"><div class="card"><h3>10 000 Gems</h3><p class="price">4 €</p></div></a>
+    <a href="500_000_dungeon_currency.html"><div class="card"><h3>500 000 Dungeon Currency</h3><p class="price">6 €</p></div></a>
     <a href="level_7_stones_(50×).html"><div class="card"><h3>Level 7 Stones (50×)</h3><p class="price">5 €</p></div></a>
     <a href="level_8_stones_(50×).html"><div class="card"><h3>Level 8 Stones (50×)</h3><p class="price">20 €</p></div></a>
     <a href="level_9_stones_(50×).html"><div class="card"><h3>Level 9 Stones (50×)</h3><p class="price">30 €</p></div></a>
