--- a/50_000_gold.html
+++ b/50_000_gold.html
@@ -48,7 +48,7 @@
     <h1>50,000 Gold</h1>
     <img src="gold.png" alt="50,000 Gold" class="product-image">
     <p><strong>Price:</strong> 3 €</p>
-    <p>Get instant access to 50,000 gold coins for your unlocked heroes. Use it to level up, upgrade gear, and dominate the battlefield!</p>
+    <p>Get instant access to 50,000 gold coins. Use it to level up, upgrade, and dominate the battlefield!</p>
     <a href="https://discord.gg/2bF6Yue9" class="discord-button" target="_blank">Click here to order on Discord</a>
   </div>
 </body>
