--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DVJJS9XTQQ"></script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-DVJJS9XTQQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -12,10 +13,10 @@
   gtag('config', 'G-DVJJS9XTQQ');
 </script>
 <!-- /Google Analytics -->
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NovaPatch – Hunt Royale Mods</title>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>NovaPatch – Hunt Royale Mods</title>
+<style>
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
     :root {
       --primary: #00e1ff;
@@ -133,8 +134,16 @@
       color: #888;
       background: var(--bg-alt);
     }
-  </style>
-
+  
+.click-label {
+  font-size: 0.75rem;
+  color: #00e1ff;
+  text-align: center;
+  margin-top: 8px;
+  opacity: 0.7;
+  font-style: italic;
+}
+</style>
 <style>
 /* Fade-in animation for content */
 .fade-in {
@@ -163,7 +172,6 @@ body::before {
   opacity: 0.1;
 }
 </style>
-
 <style>
   body {
     font-family: 'Orbitron', sans-serif;
@@ -194,63 +202,55 @@ body::before {
     }
   }
 </style>
-
 </head>
-
 <body>
-
 <header>
-  <h1>NovaPatch</h1>
-  <p>Your trusted Hunt Royale savefile modding service</p>
-  <a href="https://discord.gg/2bF6Yue9" class="btn" target="_blank">Join our Discord</a>
+<h1>NovaPatch</h1>
+<p>Your trusted Hunt Royale savefile modding service</p>
+<a class="btn" href="https://discord.gg/2bF6Yue9" target="_blank">Join our Discord</a>
 </header>
-
 <nav>
-  <button class="tab-btn active" data-tab="solo">Solo Prices</button>
-  <button class="tab-btn" data-tab="bundles">Bundles</button>
+<button class="tab-btn active" data-tab="solo">Solo Prices</button>
+<button class="tab-btn" data-tab="bundles">Bundles</button>
 </nav>
-
-<section id="solo" class="active">
-  <h2>Solo Prices</h2>
-  <div class="grid">
-    <a href="unlock_all_heroes.html"><div class="card"><h3>Unlock All Heroes</h3><p class="price">10 €</p></div></a>
-    <a href="unlock_all_skins.html"><div class="card"><h3>Unlock All Skins</h3><p class="price">8 €</p></div></a>
-    <a href="unlock_all_skills.html"><div class="card"><h3>Unlock All Skills</h3><p class="price">6 €</p></div></a>
-    <a href="unlock_all_pets.html"><div class="card"><h3>Unlock All Pets</h3><p class="price">6 €</p></div></a>
-    <a href="max_level_all_heroes.html"><div class="card"><h3>Max Level All Heroes</h3><p class="price">10 €</p></div></a>
-    <a href="awakening_1.html"><div class="card"><h3>Awakening 1</h3><p class="price">8 €</p></div></a>
-    <a href="awakening_2.html"><div class="card"><h3>Awakening 2</h3><p class="price">10 €</p></div></a>
-    <a href="50_000_gold.html"><div class="card"><h3>50 000 Gold</h3><p class="price">3 €</p></div></a>
-    <a href="10_000_gems.html"><div class="card"><h3>10 000 Gems</h3><p class="price">4 €</p></div></a>
-    <a href="500_000_dungeon_currency.html"><div class="card"><h3>500 000 Dungeon Currency</h3><p class="price">6 €</p></div></a>
-    <a href="level_7_stones_(50×).html"><div class="card"><h3>Level 7 Stones (50×)</h3><p class="price">5 €</p></div></a>
-    <a href="level_8_stones_(50×).html"><div class="card"><h3>Level 8 Stones (50×)</h3><p class="price">20 €</p></div></a>
-    <a href="level_9_stones_(50×).html"><div class="card"><h3>Level 9 Stones (50×)</h3><p class="price">30 €</p></div></a>
-    <a href="perfect_mythic_gear.html"><div class="card"><h3>Perfect Mythic Gear</h3><p class="price">20 €</p></div></a>
-    <a href="custom_titan_gear.html"><div class="card"><h3>Custom Titan Gear</h3><p class="price">30 €</p></div></a>
-    <a href="vip_pass.html"><div class="card"><h3>VIP Pass</h3><p class="price">4 €</p></div></a>
-    <a href="season_pass.html"><div class="card"><h3>Season Pass</h3><p class="price">4 €</p></div></a>
-    <a href="dungeon_pass.html"><div class="card"><h3>Dungeon Pass</h3><p class="price">4 €</p></div></a>
-  </div>
+<section class="active" id="solo">
+<h2>Solo Prices</h2>
+<div class="grid">
+<a href="unlock_all_heroes.html"><div class="card"><h3>Unlock All Heroes</h3><p class="price">10 €</p><div class="click-label">Click me</div></div></a>
+<a href="unlock_all_skins.html"><div class="card"><h3>Unlock All Skins</h3><p class="price">8 €</p><div class="click-label">Click me</div></div></a>
+<a href="unlock_all_skills.html"><div class="card"><h3>Unlock All Skills</h3><p class="price">6 €</p><div class="click-label">Click me</div></div></a>
+<a href="unlock_all_pets.html"><div class="card"><h3>Unlock All Pets</h3><p class="price">6 €</p><div class="click-label">Click me</div></div></a>
+<a href="max_level_all_heroes.html"><div class="card"><h3>Max Level All Heroes</h3><p class="price">10 €</p><div class="click-label">Click me</div></div></a>
+<a href="awakening_1.html"><div class="card"><h3>Awakening 1</h3><p class="price">8 €</p><div class="click-label">Click me</div></div></a>
+<a href="awakening_2.html"><div class="card"><h3>Awakening 2</h3><p class="price">10 €</p><div class="click-label">Click me</div></div></a>
+<a href="50_000_gold.html"><div class="card"><h3>50 000 Gold</h3><p class="price">3 €</p><div class="click-label">Click me</div></div></a>
+<a href="10_000_gems.html"><div class="card"><h3>10 000 Gems</h3><p class="price">4 €</p><div class="click-label">Click me</div></div></a>
+<a href="500_000_dungeon_currency.html"><div class="card"><h3>500 000 Dungeon Currency</h3><p class="price">6 €</p><div class="click-label">Click me</div></div></a>
+<a href="level_7_stones_(50×).html"><div class="card"><h3>Level 7 Stones (50×)</h3><p class="price">5 €</p><div class="click-label">Click me</div></div></a>
+<a href="level_8_stones_(50×).html"><div class="card"><h3>Level 8 Stones (50×)</h3><p class="price">20 €</p><div class="click-label">Click me</div></div></a>
+<a href="level_9_stones_(50×).html"><div class="card"><h3>Level 9 Stones (50×)</h3><p class="price">30 €</p><div class="click-label">Click me</div></div></a>
+<a href="perfect_mythic_gear.html"><div class="card"><h3>Perfect Mythic Gear</h3><p class="price">20 €</p><div class="click-label">Click me</div></div></a>
+<a href="custom_titan_gear.html"><div class="card"><h3>Custom Titan Gear</h3><p class="price">30 €</p><div class="click-label">Click me</div></div></a>
+<a href="vip_pass.html"><div class="card"><h3>VIP Pass</h3><p class="price">4 €</p><div class="click-label">Click me</div></div></a>
+<a href="season_pass.html"><div class="card"><h3>Season Pass</h3><p class="price">4 €</p><div class="click-label">Click me</div></div></a>
+<a href="dungeon_pass.html"><div class="card"><h3>Dungeon Pass</h3><p class="price">4 €</p><div class="click-label">Click me</div></div></a>
+</div>
 </section>
-
 <section id="bundles">
-  <h2>Bundles</h2>
-  <div class="grid">
-    <a href="hero_unlock_pack.html"><div class="card"><h3>Hero Unlock Pack</h3><p>Heroes, Skins, Skills</p><p class="price">15 €</p></div></a>
-    <a href="hero_upgrade_pack.html"><div class="card"><h3>Hero Upgrade Pack</h3><p>Max Level + Awakening 1 & 2</p><p class="price">20 €</p></div></a>
-    <a href="stone_mastery_pack.html"><div class="card"><h3>Stone Mastery Pack</h3><p>Level 7+8 Stones (50×)</p><p class="price">18 €</p></div></a>
-    <a href="midgame_boost_pack.html"><div class="card"><h3>Midgame Boost Pack</h3><p>Mythic Gear + Level 8 Stones</p><p class="price">30 €</p></div></a>
-    <a href="endgame_god_pack.html"><div class="card"><h3>Endgame God Pack</h3><p>Titan Gear + Level 9 Stones</p><p class="price">50 €</p></div></a>
-    <a href="gold_rush_pack.html"><div class="card"><h3>Gold Rush Pack</h3><p>50 K Gold + 10 K Gems + 500 K Dungeon</p><p class="price">12 €</p></div></a>
-    <a href="vip_bundle.html"><div class="card"><h3>VIP Bundle</h3><p>VIP + Season + Dungeon Pass</p><p class="price">10 €</p></div></a>
-  </div>
+<h2>Bundles</h2>
+<div class="grid">
+<a href="hero_unlock_pack.html"><div class="card"><h3>Hero Unlock Pack</h3><p>Heroes, Skins, Skills</p><p class="price">15 €</p><div class="click-label">Click me</div></div></a>
+<a href="hero_upgrade_pack.html"><div class="card"><h3>Hero Upgrade Pack</h3><p>Max Level + Awakening 1 &amp; 2</p><p class="price">20 €</p><div class="click-label">Click me</div></div></a>
+<a href="stone_mastery_pack.html"><div class="card"><h3>Stone Mastery Pack</h3><p>Level 7+8 Stones (50×)</p><p class="price">18 €</p><div class="click-label">Click me</div></div></a>
+<a href="midgame_boost_pack.html"><div class="card"><h3>Midgame Boost Pack</h3><p>Mythic Gear + Level 8 Stones</p><p class="price">30 €</p><div class="click-label">Click me</div></div></a>
+<a href="endgame_god_pack.html"><div class="card"><h3>Endgame God Pack</h3><p>Titan Gear + Level 9 Stones</p><p class="price">50 €</p><div class="click-label">Click me</div></div></a>
+<a href="gold_rush_pack.html"><div class="card"><h3>Gold Rush Pack</h3><p>50 K Gold + 10 K Gems + 500 K Dungeon</p><p class="price">12 €</p><div class="click-label">Click me</div></div></a>
+<a href="vip_bundle.html"><div class="card"><h3>VIP Bundle</h3><p>VIP + Season + Dungeon Pass</p><p class="price">10 €</p><div class="click-label">Click me</div></div></a>
+</div>
 </section>
-
 <footer>
   © 2025 NovaPatch – All rights reserved.
 </footer>
-
 <script>
   const buttons = document.querySelectorAll('.tab-btn');
   const sections = document.querySelectorAll('section');
@@ -265,6 +265,5 @@ body::before {
     });
   });
 </script>
-
 </body>
 </html>
