--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ body::before {
 <header>
 <h1>NovaPatch</h1>
 <p>Your trusted Hunt Royale savefile modding service</p>
-<a class="btn" href="https://discord.gg/2bF6Yue9" target="_blank">Join our Discord</a>
+<a class="btn" href="https://discord.gg/wGBpUcDENz" target="_blank">Join our Discord</a>
 </header>
 <nav>
 <button class="tab-btn active" data-tab="solo">Solo Prices</button>
