--- a/10_000_gems.html
+++ b/10_000_gems.html
@@ -58,7 +58,7 @@
     <p><strong>Price:</strong> 4 €</p>
     <p>Get 10,000 Gems – the premium in-game currency used for unlocking exclusive features and upgrades!</p>
     <p>Click below to join our Discord and order now:</p>
-    <a class="discord-btn" href="https://discord.gg/2bF6Yue9" target="_blank">Join Discord</a>
+    <a class="discord-btn" href="https://discord.gg/wGBpUcDENz" target="_blank">Join Discord</a>
   </div>
 </body>
 </html>
