--- a/500_000_dungeon_currency.html
+++ b/500_000_dungeon_currency.html
@@ -58,7 +58,7 @@
     <p><strong>Price:</strong> 6 €</p>
     <p>Receive 500,000 Dungeon Currency for all <strong>unlocked</strong> dungeons. Boost your progress and gear up faster than ever!</p>
     <p>Click below to join our Discord and order now:</p>
-    <a class="discord-btn" href="https://discord.gg/2bF6Yue9" target="_blank">Join Discord</a>
+    <a class="discord-btn" href="https://discord.gg/wGBpUcDENz" target="_blank">Join Discord</a>
   </div>
 </body>
 </html>
