--- a/awakening_1.html
+++ b/awakening_1.html
@@ -61,7 +61,7 @@
     <img src="aw1.png" alt="Awakening 1 Upgrade" />
     <p><strong>Price:</strong> 8 €</p>
     <p>Take your unlocked heroes to the next level! With Awakening 1, each hero gains special powers, increased stats, and an edge in battle. Time to awaken their true strength.</p>
-    <a href="https://discord.gg/2bF6Yue9" class="discord-button">Click below to join our Discord and order now</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="discord-button">Click below to join our Discord and order now</a>
   </div>
 </body>
 </html>
