--- a/awakening_2.html
+++ b/awakening_2.html
@@ -58,7 +58,7 @@
     <p><strong>Price:</strong> 10 €</p>
     <p>All unlocked heroes who already received Awakening 1 will now be upgraded to <strong>Awakening 2</strong>. This boosts their power and unlocks exclusive abilities.</p>
     <p><strong>Click below to join our Discord and order now:</strong></p>
-    <a class="button" href="https://discord.gg/2bF6Yue9" target="_blank">Join Discord</a>
+    <a class="button" href="https://discord.gg/wGBpUcDENz" target="_blank">Join Discord</a>
   </div>
 </body>
 </html>
