--- a/custom_titan_gear.html
+++ b/custom_titan_gear.html
@@ -58,7 +58,7 @@
     <h1>Custom Titan Gear</h1>
     <p><strong>Price:</strong> 30 €</p>
     <p>Receive a fully customized Titan Gear set tailored for max performance. Carefully matched and optimized to support your playstyle. Ideal for endgame players looking to dominate with precision!</p>
-    <a href="https://discord.gg/2bF6Yue9" class="discord-button" target="_blank">Click to Join Discord & Order</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="discord-button" target="_blank">Click to Join Discord & Order</a>
   </div>
 </body>
 </html>
