--- a/dungeon_pass.html
+++ b/dungeon_pass.html
@@ -61,7 +61,7 @@
     <h1>Dungeon Pass</h1>
     <p><strong>Price:</strong> 4 €</p>
     <p>Unlock the Dungeon Pass to boost your dungeon progression and rewards! A perfect addition to enhance your Hunt Royale experience.</p>
-    <a class="button" href="https://discord.gg/2bF6Yue9" target="_blank">Click here to join our Discord and order now</a>
+    <a class="button" href="https://discord.gg/wGBpUcDENz" target="_blank">Click here to join our Discord and order now</a>
   </div>
 </body>
 </html>
