--- a/endgame_god_pack.html
+++ b/endgame_god_pack.html
@@ -57,7 +57,7 @@
     <img src="egp.png" alt="ENDGAME GOD PACK image" />
     <p><strong>Price:</strong> 50 €</p>
     <p>The ultimate pack: Custom Titan Gear and 50x matched Level 9 Powerstones. Dominate the endgame!</p>
-    <a href="https://discord.gg/2bF6Yue9" class="button">Click below to join our Discord and order now</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="button">Click below to join our Discord and order now</a>
   </div>
 </body>
 </html>
