--- a/gold_rush_pack.html
+++ b/gold_rush_pack.html
@@ -91,7 +91,7 @@
       <li>• 500,000 Dungeon Currency</li>
     </ul>
     <div class="price">12 €</div>
-    <a href="https://discord.gg/2bF6Yue9" class="discord-button" target="_blank">
+    <a href="https://discord.gg/wGBpUcDENz" class="discord-button" target="_blank">
       Click here to order via Discord
     </a>
   </div>
