--- a/hero_unlock_pack.html
+++ b/hero_unlock_pack.html
@@ -57,7 +57,7 @@
     <img src="hunp.png" alt="Hero Unlock Pack image" />
     <p><strong>Price:</strong> 15 €</p>
     <p>Unlock all heroes, skins, and skills in one powerful pack. Start strong and customize your roster instantly!</p>
-    <a href="https://discord.gg/2bF6Yue9" class="button">Click below to join our Discord and order now</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="button">Click below to join our Discord and order now</a>
   </div>
 </body>
 </html>
