--- a/hero_upgrade_pack.html
+++ b/hero_upgrade_pack.html
@@ -57,7 +57,7 @@
     <img src="hupp.png" alt="Hero Upgrade Pack" />
     <p><strong>Price:</strong> 20 €</p>
     <p>Upgrade your heroes to the max! This pack includes max level and both Awakening stages for all your unlocked heroes.</p>
-    <a href="https://discord.gg/2bF6Yue9" class="button">Click below to join our Discord and order now</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="button">Click below to join our Discord and order now</a>
   </div>
 </body>
 </html>
