--- a/level_7_stones_(50×).html
+++ b/level_7_stones_(50×).html
@@ -58,7 +58,7 @@
     <img src="ps7.png" alt="Level 7 Powerstones" class="product-image" />
     <p><strong>Price:</strong> 5 €</p>
     <p>Unlock all Level 7 Powerstones (50x total) to strengthen your gear and boost your performance. A must-have for any serious player looking to enhance their build.</p>
-    <a href="https://discord.gg/2bF6Yue9" class="button" target="_blank">Click here to order on Discord</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="button" target="_blank">Click here to order on Discord</a>
   </div>
 </body>
 </html>
