--- a/level_8_stones_(50×).html
+++ b/level_8_stones_(50×).html
@@ -58,7 +58,7 @@
     <p><strong>Price:</strong> 20 €</p>
     <p>Enhance your equipment with all 72 types of Level 8 Powerstones (50x each). Perfect for optimizing your setup and dominating your opponents.</p>
     <p>Click below to join our Discord and order now:</p>
-    <a class="button" href="https://discord.gg/2bF6Yue9" target="_blank">Join Discord</a>
+    <a class="button" href="https://discord.gg/wGBpUcDENz" target="_blank">Join Discord</a>
   </div>
 </body>
 </html>
