--- a/level_9_stones_(50×).html
+++ b/level_9_stones_(50×).html
@@ -57,7 +57,7 @@
     <h1>Level 9 Powerstones</h1>
     <p><strong>Price:</strong> 30 €</p>
     <p>Receive all Level 9 Powerstones (50× each). Boost your gear to the maximum and dominate the battlefield with ultimate strength!</p>
-    <a class="button" href="https://discord.gg/2bF6Yue9" target="_blank">Click here to order via Discord</a>
+    <a class="button" href="https://discord.gg/wGBpUcDENz" target="_blank">Click here to order via Discord</a>
   </div>
 </body>
 </html>
