--- a/max_level_all_heroes.html
+++ b/max_level_all_heroes.html
@@ -61,7 +61,7 @@
     <img src="maxlvl.png" alt="Max Level All Heroes" />
     <p><strong>Price:</strong> 10 €</p>
     <p>Power up your entire roster instantly! This service levels all unlocked heroes to their maximum potential – no grind, just glory.</p>
-    <a href="https://discord.gg/2bF6Yue9" class="discord-button">Click below to join our Discord and order now</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="discord-button">Click below to join our Discord and order now</a>
   </div>
 </body>
 </html>
