--- a/midgame_boost_pack.html
+++ b/midgame_boost_pack.html
@@ -57,7 +57,7 @@
     <img src="mbp.png" alt="Midgame Boost Pack image" />
     <p><strong>Price:</strong> 30 €</p>
     <p>Get over the midgame hump with perfect Mythic Gear and 50x Level 8 Powerstones to boost your strength significantly.</p>
-    <a href="https://discord.gg/2bF6Yue9" class="button">Click below to join our Discord and order now</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="button">Click below to join our Discord and order now</a>
   </div>
 </body>
 </html>
