--- a/perfect_mythic_gear.html
+++ b/perfect_mythic_gear.html
@@ -57,7 +57,7 @@
     <img src="mg.png" alt="Perfect Mythic Gear">
     <p><strong>Price:</strong> 20 €</p>
     <p>Enhance your character with a complete set of perfect Mythic Gear. Each item is carefully selected to give you the best possible stats and synergy. Dominate your enemies with confidence and style.</p>
-    <a class="button" href="https://discord.gg/2bF6Yue9" target="_blank">Click here to order on Discord</a>
+    <a class="button" href="https://discord.gg/wGBpUcDENz" target="_blank">Click here to order on Discord</a>
   </div>
 </body>
 </html>
