--- a/season_pass.html
+++ b/season_pass.html
@@ -54,7 +54,7 @@
     <h1>Season Pass</h1>
     <p><strong>Price:</strong> 4 €</p>
     <p>Get access to exclusive seasonal rewards and progress faster through NovaPatch's game features. This pass is ideal for active players who want to unlock more content efficiently.</p>
-    <a href="https://discord.gg/2bF6Yue9" class="btn">Click here to join our Discord and order now</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="btn">Click here to join our Discord and order now</a>
   </div>
 </body>
 </html>
