--- a/stone_mastery_pack.html
+++ b/stone_mastery_pack.html
@@ -57,7 +57,7 @@
     <img src="psp.png" alt="Stone Mastery Pack image" />
     <p><strong>Price:</strong> 18 €</p>
     <p>Power up your gear with 50x Level 7 and 8 Powerstones. Stone domination begins here!</p>
-    <a href="https://discord.gg/2bF6Yue9" class="button">Click below to join our Discord and order now</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="button">Click below to join our Discord and order now</a>
   </div>
 </body>
 </html>
