--- a/unlock_all_heroes.html
+++ b/unlock_all_heroes.html
@@ -58,7 +58,7 @@
     <h1>Unlock All Heroes</h1>
     <p><strong>Price:</strong> 10 €</p>
     <p>Instantly unlock all playable heroes in Hunt Royale. Whether you’re new or experienced, this upgrade gives you access to every hero available – no grinding, just greatness!</p>
-    <a href="https://discord.gg/2bF6Yue9" class="btn" target="_blank">Buy via Discord</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="btn" target="_blank">Buy via Discord</a>
   </div>
 </body>
 </html>
