--- a/unlock_all_pets.html
+++ b/unlock_all_pets.html
@@ -57,7 +57,7 @@
     <img src="pets.png" alt="Unlock All Pets" />
     <p><strong>Price:</strong> 6 €</p>
     <p>Unlock every available pet instantly and power up your Hunt Royale experience! Perfect for completing your collection and gaining tactical advantages in battle.</p>
-    <a class="button" href="https://discord.gg/2bF6Yue9" target="_blank">Click here to join our Discord and order now</a>
+    <a class="button" href="https://discord.gg/wGBpUcDENz" target="_blank">Click here to join our Discord and order now</a>
   </div>
 </body>
 </html>
