--- a/unlock_all_skills.html
+++ b/unlock_all_skills.html
@@ -59,7 +59,7 @@
     <p><strong>Price:</strong> 6 €</p>
     <p>Unlock every skill available in Hunt Royale for all unlocked heroes. Boost your gameplay with instant access to power-ups like damage, multishot, life steal, poison strike, and more!</p>
     <p>This service is part of NovaPatch's personalized digital modifications.</p>
-    <a class="button" href="https://discord.gg/2bF6Yue9" target="_blank">Buy via Discord</a>
+    <a class="button" href="https://discord.gg/wGBpUcDENz" target="_blank">Buy via Discord</a>
   </div>
 </body>
 </html>
