--- a/unlock_all_skins.html
+++ b/unlock_all_skins.html
@@ -58,7 +58,7 @@
     <p><strong>Price:</strong> 8 €</p>
     <p>Gain access to all character skins and express your style with flair. Whether you're into fierce warriors or whimsical costumes – this pack has them all!</p>
     <p>Click below to join our Discord and order now:</p>
-    <a href="https://discord.gg/2bF6Yue9" class="button">Join our Discord</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="button">Join our Discord</a>
   </div>
 </body>
 </html>
