--- a/vip_bundle.html
+++ b/vip_bundle.html
@@ -57,7 +57,7 @@
     <img src="vipb.png" alt="VIP Bundle image" />
     <p><strong>Price:</strong> 10 €</p>
     <p>Get VIP, Season Pass, and Dungeon Pass bundled together. Triple the value!</p>
-    <a href="https://discord.gg/2bF6Yue9" class="button">Click below to join our Discord and order now</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="button">Click below to join our Discord and order now</a>
   </div>
 </body>
 </html>
