--- a/vip_pass.html
+++ b/vip_pass.html
@@ -57,7 +57,7 @@
     <img src="vip.png" alt="VIP Pass" class="product-img" />
     <p><strong>Price:</strong> 4 €</p>
     <p>Get 3 months of VIP status to boost your progress and unlock exclusive benefits. Fast-track your Hunt Royale experience today!</p>
-    <a href="https://discord.gg/2bF6Yue9" class="discord-button">Click to Buy on Discord</a>
+    <a href="https://discord.gg/wGBpUcDENz" class="discord-button">Click to Buy on Discord</a>
   </div>
 </body>
 </html>
