--- a/unlock_all_heroes.html
+++ b/unlock_all_heroes.html
@@ -12,7 +12,7 @@
 <!-- /Google Analytics -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Unlock All Heroes | NovaPatch</title>
+  <title>Unlock Heroes | NovaPatch</title>
   <style>
     body {
       background: url('https://i.imgur.com/TNEJezP.jpeg') no-repeat center center fixed;
@@ -55,9 +55,9 @@
 <body>
   <div class="box">
     <img src="e1eacdba-7da5-4c53-b763-d583d8f6c533.png" alt="Unlock All Heroes">
-    <h1>Unlock All Heroes</h1>
-    <p><strong>Price:</strong> 10 €</p>
-    <p>Instantly unlock all playable heroes in Hunt Royale. Whether you’re new or experienced, this upgrade gives you access to every hero available – no grinding, just greatness!</p>
+    <h1>Unlock Heroes</h1>
+    <p><strong>Price:</strong> 0,50 €</p>
+    <p>Instantly unlock playable heroes in Hunt Royale. Whether you’re new or experienced, this upgrade gives you access to every hero available – no grinding, just greatness!</p>
     <a href="https://discord.gg/wGBpUcDENz" class="btn" target="_blank">Buy via Discord</a>
   </div>
 </body>
