--- a/unlock_all_heroes.html
+++ b/unlock_all_heroes.html
@@ -56,7 +56,7 @@
   <div class="box">
     <img src="e1eacdba-7da5-4c53-b763-d583d8f6c533.png" alt="Unlock All Heroes">
     <h1>Unlock Heroes</h1>
-    <p><strong>Price:</strong> 0,50 €</p>
+    <p><strong>Price:</strong> 0,50 € per Hero</p>
     <p>Instantly unlock playable heroes in Hunt Royale. Whether you’re new or experienced, this upgrade gives you access to every hero available – no grinding, just greatness!</p>
     <a href="https://discord.gg/wGBpUcDENz" class="btn" target="_blank">Buy via Discord</a>
   </div>
