--- a/unlock_all_skins.html
+++ b/unlock_all_skins.html
@@ -53,9 +53,9 @@
 </head>
 <body>
   <div class="box">
-    <h1>Unlock All Skins</h1>
+    <h1>Unlock Skins</h1>
     <img src="skins.png" alt="Unlock All Skins" />
-    <p><strong>Price:</strong> 8 €</p>
+    <p><strong>Price:</strong> 0,10 € per Skin</p>
     <p>Gain access to all character skins and express your style with flair. Whether you're into fierce warriors or whimsical costumes – this pack has them all!</p>
     <p>Click below to join our Discord and order now:</p>
     <a href="https://discord.gg/wGBpUcDENz" class="button">Join our Discord</a>
