--- a/500_000_dungeon_currency.html
+++ b/500_000_dungeon_currency.html
@@ -12,7 +12,7 @@
 <!-- /Google Analytics -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>500,000 Dungeon Currency | NovaPatch</title>
+  <title>Dungeon Currency | NovaPatch</title>
   <style>
     body {
       background: url('https://i.imgur.com/TNEJezP.jpeg') no-repeat center center fixed;
@@ -54,9 +54,9 @@
 <body>
   <div class="box">
     <img src="https://raw.githubusercontent.com/ImLex/NovaPatch/main/dg.png" alt="500K Dungeon Currency">
-    <h1>500,000 Dungeon Currency</h1>
+    <h1>Dungeon Currency</h1>
     <p><strong>Price:</strong> 15 €</p>
-    <p>Receive 500,000 Dungeon Currency for all <strong>unlocked</strong> dungeons. Boost your progress and gear up faster than ever!</p>
+    <p>Receive Dungeon Currency for all <strong>unlocked</strong> dungeons. Boost your progress and gear up faster than ever!</p>
     <p>Click below to join our Discord and order now:</p>
     <a class="discord-btn" href="https://discord.gg/wGBpUcDENz" target="_blank">Join Discord</a>
   </div>
