--- a/gold_rush_pack.html
+++ b/gold_rush_pack.html
@@ -88,7 +88,12 @@
     <ul style="text-align: left; max-width: 400px; margin: 0 auto 1rem;">
       <li>• 50,000 Gold</li>
       <li>• 10,000 Gems</li>
-      <li>• 500,000 Dungeon Currency</li>
+      <li>• Dragon: 100.000</li>
+      <li>• Kraken: 100.000</li>
+      <li>• Yeti:   100.000</li>
+      <li>• Maze:   150.000</li>
+      <li>• Dark-F: 50.000</li>
+      <li>• Fractured: 20.000</li>
     </ul>
     <div class="price">20 €</div>
     <a href="https://discord.gg/wGBpUcDENz" class="discord-button" target="_blank">
