--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ body::before {
 <section id="bundles">
 <h2>Bundles</h2>
 <div class="grid">
-<a href="hero_unlock_pack.html"><div class="card"><h3>Hero Unlock Pack</h3><p>Heroes, Skins, Skills</p><p class="price">40 €</p><div class="click-label">Click me</div></div></a>
+<a href="hero_unlock_pack.html"><div class="card"><h3>Hero Unlock Pack</h3><p>Heroes, Skins, Skills, Pets</p><p class="price">40 €</p><div class="click-label">Click me</div></div></a>
 <a href="hero_upgrade_pack.html"><div class="card"><h3>Hero Upgrade Pack</h3><p>Max Level + Awakening 1 &amp; 2</p><p class="price">20 €</p><div class="click-label">Click me</div></div></a>
 <a href="stone_mastery_pack.html"><div class="card"><h3>Stone Mastery Pack</h3><p>Level 7+8 Stones (50×)</p><p class="price">18 €</p><div class="click-label">Click me</div></div></a>
 <a href="midgame_boost_pack.html"><div class="card"><h3>Midgame Boost Pack</h3><p>Mythic Gear + Level 8 Stones</p><p class="price">25 €</p><div class="click-label">Click me</div></div></a>
