--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ body::before {
 <a href="stone_mastery_pack.html"><div class="card"><h3>Stone Mastery Pack</h3><p>Level 7+8 Stones (50×)</p><p class="price">18 €</p><div class="click-label">Click me</div></div></a>
 <a href="midgame_boost_pack.html"><div class="card"><h3>Midgame Boost Pack</h3><p>Mythic Gear + Level 8 Stones</p><p class="price">25 €</p><div class="click-label">Click me</div></div></a>
 <a href="endgame_god_pack.html"><div class="card"><h3>Endgame God Pack</h3><p>Titan Gear + Level 9 Stones</p><p class="price">38 €</p><div class="click-label">Click me</div></div></a>
-<a href="gold_rush_pack.html"><div class="card"><h3>Gold Rush Pack</h3><p>50 K Gold + 10 K Gems + 500 K Dungeon</p><p class="price">20 €</p><div class="click-label">Click me</div></div></a>
+<a href="gold_rush_pack.html"><div class="card"><h3>Gold Rush Pack</h3><p>50 K Gold + 10 K Gems + Dungeon Currency</p><p class="price">20 €</p><div class="click-label">Click me</div></div></a>
 <a href="vip_bundle.html"><div class="card"><h3>VIP Bundle</h3><p>VIP + Season + Dungeon Pass</p><p class="price">12 €</p><div class="click-label">Click me</div></div></a>
 </div>
 </section>
