--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     header {
       padding: 60px 20px;
       text-align: center;
-      background: url('https://cdn.pixabay.com/photo/2013/07/18/20/26/space-165560_960_720.jpg') no-repeat center center;
+      background: url('https://i.imgur.com/TNEJezP.jpeg') no-repeat center center;
       background-size: cover;
       color: white;
     }
