--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ body::before {
   position: fixed;
   width: 100%;
   height: 100%;
-  background: url('https://cdn.pixabay.com/animation/2023/05/26/09/57/09-57-11-905_512.gif') repeat;
+  background: url('https://i.imgur.com/TNEJezP.jpeg') repeat;
   z-index: -1;
   opacity: 0.1;
 }
